--- a/.cnb/workflows/vscode.yml
+++ b/.cnb/workflows/vscode.yml
@@ -1,7 +1,7 @@
 $:
   vscode:
     - docker:
-        image: docker.cnb.cool/znb/images/debian:all
+        image: docker.cnb.cool/znb/images/debian:new
       runner:
         cpus: 8
       services:
