--- a/.github/workflows/go-ci-check.yml
+++ b/.github/workflows/go-ci-check.yml
@@ -7,27 +7,30 @@ jobs:
     name: golang-lint
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/setup-go@v3
+      - name: 设置go环境
+        uses: actions/setup-go@v5
         with:
-          go-version: 1.18
-      - uses: actions/checkout@v3
+          go-version-file: "go.mod"
+          cache-dependency-path: "go.sum"
+      - uses: actions/checkout@v4
       - run: |
           release_url=$(curl -s https://api.github.com/repos/opsre/go-ldap-admin-ui/releases/latest | grep "browser_download_url" | grep -v 'dist.zip.md5' | cut -d '"' -f 4); wget $release_url && unzip dist.zip && rm dist.zip && mv dist public/static
       - name: golangci-lint
-        uses: golangci/golangci-lint-action@v3
+        uses: golangci/golangci-lint-action@v8
         with:
-          version: v1.57.2
+          version: v2.4.0
           args: --timeout=5m --skip-files="public/client/feishu/feishu.go"
   build:
     name: go-build
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     - run: |
           release_url=$(curl -s https://api.github.com/repos/opsre/go-ldap-admin-ui/releases/latest | grep "browser_download_url" | grep -v 'dist.zip.md5' | cut -d '"' -f 4); wget $release_url && unzip dist.zip && rm dist.zip && mv dist public/static
-    - name: Set up Go
-      uses: actions/setup-go@v3
-      with:
-        go-version: 1.18
+    - name: 设置go环境
+        uses: actions/setup-go@v5
+        with:
+          go-version-file: "go.mod"
+          cache-dependency-path: "go.sum"
     - name: Build
       run: go build -v ./...
