--- a/.github/workflows/buildAndPush-binary-to-release.yml
+++ b/.github/workflows/buildAndPush-binary-to-release.yml
@@ -23,6 +23,6 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }} # 一个默认的变量，用来实现往 Release 中添加文件
           goos: ${{ matrix.goos }}
           goarch: ${{ matrix.goarch }}
-          goversion: 1.18 # 可以指定编译使用的 Golang 版本
+          goversion: "https://go.dev/dl/go1.25.1.linux-amd64.tar.gz" # 可以指定编译使用的 Golang 版本
           binary_name: "go-ldap-admin" # 可以指定二进制文件的名称
           extra_files: LICENSE config.yml README.md # 需要包含的额外文件
