✨ feat(base): 新增系统配置获取功能。
- 添加配置项 `enable-sync` 用于控制是否开启同步功能。
- 新增 `/base/config` 接口，用于前端获取系统配置信息。
- 新增 `BaseConfigReq` 和 `BaseConfigRsp` 结构体，支持配置信息的请求与响应。
- 更新 Docker Compose 配置文件，同步新增配置项。

--- a/docs/docker-compose/docker-compose.yaml
+++ b/docs/docker-compose/docker-compose.yaml
@@ -165,6 +165,8 @@ configs:
         user-password-encryption-type: "ssha"
         # 默认邮箱后缀
         default-email-suffix: "eryajf.net"
+        # 是否开启同步功能，表示将该ldap中的数据同步到数据库，如果你是新建的，则保持false，页面上也不会展示同步按钮
+        enable-sync: false
       # 📢 即便用不到如下三段配置信息，也不要删除，否则会有一些奇怪的错误出现
       dingtalk:
         # 配置获取详细文档参考： http://ldapdoc.eryajf.net/pages/94f43a/
